terraform/bastion_ec2.tf
resource "aws_instance" "DemoEC2Bastion" {
    ami = "ami-0bea7fd38fabe821a"
    instance_type = "t2.micro" 
    key_name = var.key_pair

    subnet_id = aws_subnet.DemoSubnetBastion.id
    associate_public_ip_address = true

    tags = {
        Name = "Demo ec2 bastion instances"
    }
}
